--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <a href="/login" class="btn btn-primary"> Login </a>
-    <a href="/create_user" class="btn btn-primary"> Sign Up</a>
+    <a href="/sign_up" class="btn btn-primary"> Sign Up</a>
 </body>
 </html>
