--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h2 class="mt-5">Sign Up</h2>
-    <form action="/create_user" method="post">
+    <form action="/sign_up" method="post">
       <div class="mb-3">
         <label for="name" class="form-label">Name</label>
         <input type="text" class="form-control" id="name" name="user_name" required>
